--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.64.1",
     "@tailwindcss/typography": "^0.5.15",
+    "@uiw/react-markdown-editor": "^6.1.2",
+    "@uiw/react-md-editor": "^4.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "easymde": "^2.18.0",
