--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "packageManager": "npm@10.9.0",
   "overrides": {
     "react": "$react",
-    "react-dom": "$react-dom"
+    "react-dom": "$react-dom",
+    "next": "$next"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.64.1",
+    "@sentry/nextjs": "^8.38.0",
     "@tailwindcss/typography": "^0.5.15",
     "@uiw/react-markdown-editor": "^6.1.2",
     "@uiw/react-md-editor": "^4.0.4",
